# HECO

include/heco/IR/: CMakeLists.txt
include/heco/IR/BGV/: BGV.td
include/heco/IR/CKKS/: CKKS.td  CKKSDialect.h  CMakeLists.txt
include/heco/IR/FHE/: FHE.td
include/heco/Passes/bfv2emitcopenfhe/: LowerBFVToEmitCOpenFHE.h
include/heco/Passes/bgv2emitcopenfhe/: LowerBGVToEmitCOpenFHE.h
include/heco/Passes/ckks2emitc/: LowerCKKSToEmitC.h
include/heco/Passes/ckks2emitcopenfhe/: LowerCKKSToEmitCOpenFHE.h
include/heco/Passes/fhe2ckks/: LowerFHEToCKKS.h
include/heco/Passes/hir2hir/: Batching.h  Params.h  Tensor2BatchedSecret.h
include/heco/Passes/insertbootstrap/: InsertBootstrap.h
src/IR/BGV/: BGVDialect.cpp
src/IR/CKKS/: CKKSDialect.cpp  CMakeLists.txt
src/Passes/: CMakeLists.txt
src/Passes/bfv2emitcopenfhe/: CMakeLists.txt  LowerBFVToEmitCOpenFHE.cpp
src/Passes/bgv2emitc/: LowerBGVToEmitC.cpp
src/Passes/bgv2emitcopenfhe/: CMakeLists.txt  LowerBGVToEmitCOpenFHE.cpp
src/Passes/ckks2emitc/: CMakeLists.txt  LowerCKKSToEmitC.cpp
src/Passes/ckks2emitcopenfhe/: CMakeLists.txt  LowerCKKSToEmitCOpenFHE.cpp  LowerCKKSToEmitCOpenFHE.td
src/Passes/fhe2bgv/: LowerFHEToBGV.cpp
src/Passes/fhe2ckks/: CMakeLists.txt  LowerFHEToCKKS.cpp  LowerFHEToCKKS.td
src/Passes/hir2hir/: Batching.cpp  CMakeLists.txt  InternalOperandBatching.cpp  Params.cpp  Tensor2BatchedSecret.cpp
src/Passes/insertbootstrap/: CMakeLists.txt  InsertBootstrap.cpp
src/tools/heco/: CMakeLists.txt  heco.cpp
src/tools/mlir-lsp-server/: CMakeLists.txt  mlir-lsp-server.cpp
