add_subdirectory(evarelinearize)
add_subdirectory(evawaterline)
add_subdirectory(evamatchscale)
add_subdirectory(evalazymodswitch)
add_subdirectory(evametadata)
add_subdirectory(fhe2bfv)
add_subdirectory(fhe2ckks)
add_subdirectory(ckks2emitc)
add_subdirectory(bfv2emitc)
add_subdirectory(ckks2emitcopenfhe)
add_subdirectory(bfv2emitcopenfhe)
add_subdirectory(bgv2emitcopenfhe)
add_subdirectory(bfv2llvm)
add_subdirectory(fhe2emitc)
add_subdirectory(fhe2eva)
add_subdirectory(hir2hir)
add_subdirectory(fhe2bgv)
add_subdirectory(bgv2emitc)